--- a/first/styles.css
+++ b/first/styles.css
@@ -8,12 +8,13 @@
 
 body {
     line-height: 1.6;
-   	background-image: url('output-onlinepngtools.png'); /* Chemin vers l'image */
-    background-size: cover;   /* L'image couvre toute la zone */
-    background-position: right;  /* L'image est centrée */
-    background-repeat: no-repeat; /* Pas de répétition de l'image */
+   	background-image: url('output-onlinepngtools.png'); 
+    background-size: cover;  
+    background-position: right; 
+    background-repeat: no-repeat;
     color: #000000; 
-}
+} 
+
 
 .header {
     background-color: #000000;
@@ -22,35 +23,32 @@ body {
     text-align: center;
 }
 
-/* Utilisation d'une police personnalisée pour certains éléments */
 #me {
     font-family: 'Dancing Script', cursive;
-    font-size: 30px; /* Taille de la police, modifie selon tes besoins */
-    font-weight: bold; /* Gras, si nécessaire */
-    color: #630000; /* Couleur de texte, modifie selon tes besoins */
+    font-size: 30px; 
+    font-weight: bold; 
+    color: #630000; 
 	margin-right: auto;
 }
 
 #aboutme {
     font-family: 'Dancing Script', cursive;
-    font-size: 16px; /* Taille de la police, modifie selon tes besoins */
-    font-weight: bold; /* Gras, si nécessaire */
+    font-size: 16px; 
+    font-weight: bold;
     color: #630000;
 }
 
 .texte-important {
-    font-family: 'Georgia', serif; /* Changement de la police pour le texte important */
+    font-family: 'Georgia', serif; 
     font-size: 18px;
 }
 
-/* Style pour le titre des sections */
 #portfolio-title {
     text-align: left;
 	margin: 50px;
     font-size: 48px;
     color: #630000;
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
-    /* font-family: 'Patrick Hand', cursive; */
     margin-bottom: 40px;
 }
 
@@ -59,9 +57,8 @@ body {
     display: flex;
     flex-wrap: wrap;
 	flex-direction: column;
-    justify-content: center;  /* Centre les projets dans la section */
-	/* color :rgb(112, 17, 17); */
-    gap: 0px;                /* Ajoute de l'espace entre les projets */
+    justify-content: center;
+    gap: 0px;       
 }
 
 .image-container {
@@ -69,28 +66,28 @@ body {
     display: inline-block;
 	overflow: hidden; 
 }
-/* Conteneur parent pour aligner l'image et le texte */
+
 .content-container {
     display: flex;
-    align-items: flex-start; /* Aligne l'image et le texte au début verticalement */
-    gap: 90px; /* Espace entre l'image et le texte */
-    padding: 50px; /* Espacement interne */
+    align-items: flex-start; 
+    gap: 90px; 
+    padding: 50px; 
 }
 
 .image-content img {
-    max-width: 250px; /* Ajuste la taille de l'image si nécessaire */
+    max-width: 250px;
     height: auto;
-    border-radius: 10px; /* Ajoute un effet arrondi si souhaité */
+    border-radius: 10px; 
 }
 
 .text-container {
-    max-width: 600px; /* Ajuste la largeur du texte */
+    max-width: 600px; 
 	flex-direction: column;
 	justify-content: center;
 }
 
 img {
-    width: 300px; /* Ajuste la taille de l'image */
+    width: 300px; 
     height: auto;
 }
 
@@ -104,8 +101,8 @@ img {
     text-align: center;
     padding: 0px;
 	margin: 0;
-	height: 30px; /* Ajuste la hauteur de la bannière selon tes besoins */
-    line-height: 30px; /* Centre le texte verticalement si nécessaire */
+	height: 30px; 
+    line-height: 30px; 
     opacity: 0;
     transition: opacity 0.3s ease;
 	border-radius: 10px;
@@ -128,14 +125,14 @@ img {
 }
 
 .modal-content .close {
-    position: absolute; /* La position absolue permet de placer l'élément où l'on souhaite */
-    top: 10px; /* Distance depuis le haut de la modale */
-    right: 15px; /* Distance depuis le bord droit de la modale */
-    font-size: 28px; /* Taille de la croix */
+    position: absolute; 
+    top: 10px; 
+    right: 15px; 
+    font-size: 28px; 
     font-weight: bold;
-    color: #aaa; /* Couleur par défaut */
-    cursor: pointer; /* Curseur de la souris lors du survol */
-    transition: color 0.3s ease; /* Ajoute une transition douce pour le changement de couleur */
+    color: #aaa; 
+    cursor: pointer; 
+    transition: color 0.3s ease; 
 }
 
 .modal-content {
@@ -146,60 +143,58 @@ img {
     border: 5px solid #888;
     width: 80%;
 	display: flex;
-    flex-direction: column; /*Organise les éléments en colonne
-    /* align-items: center;  */
+    flex-direction: column; 
 }
 
 
 .modal-content h2 {
 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
-    font-size: 28px; /* Taille de la police du titre */
-    color: #000000; /* Couleur du titre */
-    margin-bottom: 10px; /* Espace sous le titre */
-    text-align: center; /*Alignement à gauche
-    font-weight: bold; /* Mettre le titre en gras */
+    font-size: 28px; 
+    color: #000000; 
+    margin-bottom: 10px; 
+    text-align: center;
+    font-weight: bold;
 }
 
-/* Style spécifique pour les paragraphes <p> dans la modale */
 .modal-content p {
 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
-    font-size: 14px; /* Taille de police des paragraphes */
-    color: #000000; /* Couleur du texte */
-    line-height: 1.5; /* Espacement entre les lignes */
-    text-align: left; /* Justification du texte */
+    font-size: 14px; 
+    color: #000000; 
+    line-height: 1.5; 
+    text-align: left; 
 }
 
 .modal-content a {
     font-family: 'Arial', sans-serif;
-    font-size: 18px; /* Ajuste la taille de la police selon tes besoins */
-    color: #000000; /* Couleur du lien (tu peux changer la valeur hexadécimale) */
-    text-decoration: none; /* Supprime le soulignement du lien */
-    font-weight: bold; /* Met le texte en gras */
-    transition: color 0.3s ease; /* Effet de transition lors du survol */
+    font-size: 18px;
+    color: #000000; 
+    text-decoration: none; 
+    font-weight: bold;
+    transition: color 0.3s ease; 
 	text-align: center;
 }
 
 .modal-content a:hover {
-    color: #8d1500; /* Couleur du texte au survol */
+    color: #8d1500; 
 }
 
 .image-gallery {
     display: flex;
-    flex-wrap: wrap; /* Permet de passer à la ligne suivante si nécessaire */
-    gap: 20px; /* Espace de 20px entre les images */
-    justify-content: center; /* Centre les images dans le conteneur */
-    padding: 20px; /* Espacement interne autour de la galerie */
+    flex-wrap: wrap; 
+    gap: 20px;
+    justify-content: center; 
+    padding: 20px; 
 }
 
 .image-modal {
-    width: 450px; /* Largeur fixe pour toutes les images */
-    height: 240px; /* Hauteur fixe pour toutes les images */
-    object-fit: cover; /* Ajuste l'image pour remplir la zone définie tout en conservant son ratio */
-    border-radius: 5px; /* Coins arrondis (modifiable) */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ajoute une ombre */
-    transition: transform 0.3s ease; /* Effet de transition au survol */
+    width: 450px; 
+    height: 240px; 
+    object-fit: cover; 
+    border-radius: 5px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    transition: transform 0.3s ease;
 }
 
 .close {
@@ -217,168 +212,142 @@ img {
 }
 
 .project-item {
-    /* border: 2px solid #db2c2c; Encadré avec une bordure */
-	/* margin: 0; Supprime toute marge */
-    /* padding: 0; Supprime tout padding */
-	/* width: 100%; */
     padding: 0px;
-    border-radius: 5px; /* Coins arrondis */
-    text-align: center;  /* Centre le contenu à l'intérieur de l'encadré */
-    /* max-width: 900px;    Taille maximale de l'encadré */
-	/* justify-content: center; */
-    /* box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1); Ombre douce */
+    border-radius: 5px; 
+    text-align: center;  
 }
 
 .project-image {
-    width: 900px; /*Image occupe toute la largeur de l'encadré */
-	/* display: block; */
-    height: auto; /* Ajuste la hauteur automatiquement */
-	/* border: none; */
-    border-radius: 10px; /* Coins arrondis pour l'image */
-    /* margin-bottom: 5px; Espace entre l'image et le titre */
+    width: 900px; 
+    height: auto;
+    border-radius: 10px; 
 	display: block;
 }
 
 .project-title {
     font-size: 24px;
-    color: #333; /* Couleur du titre */
+    color: #333; 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
-    margin-bottom: 10px; /* Espace sous le titre */
+    margin-bottom: 10px; 
 }
 
 .project-link {
     font-size: 18px;
-    color: #FF6347; /* Couleur du lien */
-    text-decoration: none; /* Supprime le soulignement par défaut */
+    color: #FF6347; 
+    text-decoration: none; 
     font-family: 'Arial', sans-serif;
 }
 
 .project-link:hover {
-    text-decoration: underline; /* Ajoute un soulignement au survol */
+    text-decoration: underline; 
 }
 
-/* Centrage du texte */
 .skill-category {
-    /* font-size: 2.0em; */
-
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
-    text-align: center;  /* Centre les compétences */
-    margin-bottom: 50px; /* Espace entre chaque catégorie */
+    text-align: center;  
+    margin-bottom: 50px; 
 }
 
-/* Mettre en gras et plus gros */
 .highlight {
 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
     font-weight: bold;
-    font-size: 1.2em;  /* Ajuste la taille (1.2em signifie 120% de la taille de base) */
+    font-size: 1.2em; 
 }
 .highlight2 {
 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
     font-weight: bold;
-    font-size: 1.5em;  /* Ajuste la taille (1.2em signifie 120% de la taille de base) */
+    font-size: 1.5em;  
 }
 
 
-/* Mettre en italique et espacer */
 .skill-category li em {
 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
     display: block;
-    margin-top: 5px;   /* Espacement entre le titre et la description */
+    margin-top: 5px;   
     font-style: italic;
 }
 .skill-category h3 {
 
 	font-family: 'VCR OSD Mono', 'Pixelated', 'Courier New', sans-serif;
-    /* display: block; */
-    /* margin-top: 5px;   Espacement entre le titre et la description */
     font-style: italic;
 }
 
 .detailed-list {
-    list-style-type: disc; /* Type de puce par défaut (disc = rond) */
+    list-style-type: disc; 
 	list-style-position: inside;
-    padding-left: 0; /* Espacement à gauche pour indenter les puces */
+    padding-left: 0; 
 	margin: 0;
 }
 
 
 .competence-image {
     display: block;
-    margin: 20px auto;   /* Centre l'image horizontalement */
-    width: 100px;        /* Taille de l'image (à ajuster selon les besoins) */
+    margin: 20px auto;   
+    width: 100px;       
     height: auto;
 }
 
 .game-design-image {
-    width: 120px; /* Taille spécifique pour l'image Game Design */
-    height: auto; /* Conserve le ratio d'aspect */
+    width: 120px; 
+    height: auto;
 }
 
 .development-image {
-    width: 80px; /* Taille spécifique pour l'image Development */
-    height: auto; /* Conserve le ratio d'aspect */
+    width: 80px; 
+    height: auto; 
 }
 
 .linkedin-image {
-    width: 40px; /* Ajustez cette valeur pour changer la largeur */
-    height: auto; /* Maintient les proportions de l'image */
-    transition: transform 0.3s; /* Ajoute une transition pour le hover */
+    width: 40px; 
+    height: auto; 
+    transition: transform 0.3s; 
 }
 
 .linkedin-image:hover {
-    transform: scale(1.1); /* Agrandit légèrement l'image au survol */
+    transform: scale(1.1);
 }
 
 #contact {
-    text-align: center; /* Centre tout le contenu de la section */
-    margin: 0 auto;     /* Centre la section par rapport à la page */
-    padding: 20px;      /* Espacement interne autour de la section */
+    text-align: center; 
+    margin: 0 auto;     
+    padding: 20px;   
 }
 
-/* Centrage de la liste */
 #contact ul {
-    list-style-type: none; /* Supprime les puces */
-    padding: 0;            /* Supprime le padding */
+    list-style-type: none;
+    padding: 0;           
 }
 
 #contact li {
-    margin: 10px 0; /* Espacement vertical entre les éléments de la liste */
+    margin: 10px 0; 
 }
 
-/* Classe pour centrer les images */
 .image-row {
     display: flex;
-    justify-content: center; /* Centre les images horizontalement */
+    justify-content: center;
     align-items: center;
-    gap: 10px; /* Espace entre les images */
-    margin: 20px 0; /* Espacement autour de la ligne d'images */
+    gap: 10px; 
+    margin: 20px 0; 
 }
 
-/* Style des images */
 .image-row a {
-    display: inline-block; /* Assure que les images sont traitées comme des blocs cliquables */
+    display: inline-block; 
 }
 
-/* Style des images */
 .image-row img {
-    width: 100px; /* Taille ajustée des petites images */
-    height: auto; /* Conserver le ratio de l'image */
-    object-fit: cover; /* Ajuster le cadrage de l'image */
-    cursor: pointer; /* Curseur de la souris changé lors du survol pour montrer qu'elles sont cliquables */
-    transition: transform 0.3s; /* Effet sur l'image lors du survol */
+    width: 100px; 
+    height: auto;
+    object-fit: cover; 
+    cursor: pointer; 
+    transition: transform 0.3s; 
 }
 
-/* Effet lors du survol (agrandissement de l'image) */
 .image-row img:hover {
-    transform: scale(1.1); /* Agrandissement de 10% au survol */
+    transform: scale(1.1); 
 }
-
-/* Supprime les bordures des liens */
-
-
 
 .navbar {
     display: flex;
@@ -389,20 +358,20 @@ img {
 }
 
 .navbar .nav-links {
-    display: flex;                       /* Utilise flexbox pour les liens restants */
-    justify-content: center;          /* Centre les autres liens */
-    flex: 1;                             /* Permet au conteneur de prendre l'espace restant */
+    display: flex;                 
+    justify-content: center;
+    flex: 1;  
 	margin-right: 100px;
 }
 
 .navbar a {
-    margin: 0 60px; /* Espace horizontal entre les liens (ajuste la valeur) */
-    text-decoration: none; /* Supprime le soulignement des liens */
-    color: #333; /* Couleur du texte des liens (ajuste si besoin) */
+    margin: 0 60px;
+    text-decoration: none;
+    color: #333;
 	font-size: 30px;
-    font-family: 'Patrick Hand', cursive; /* Police pour les liens */
+    font-family: 'Patrick Hand', cursive;
 }
 
 .navbar a:hover {
-    color: #830a0a; /* Change la couleur au survol (ajuste si besoin) */
+    color: #830a0a; 
 }
